<resources>
    <string name="app_name">GPS</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="location_disabled">Location disabled</string>
    <string name="location_disabled_message">Do you want enable GPS</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="no_toast">Turn on geolocation!</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed:</string>
    <string name="average_speed">Average speed:</string>
    <string name="avg_speed">AVG speed:</string>
    <string name="title_save_dialog">Save this track?</string>
    <string name="time_save_dialog">Time: </string>
    <string name="speed_save_dialog">Speed: </string>
    <string name="distance_save_dialog">Distance: </string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="empty_routes">You don\'t have any saved routes yet.</string>
</resources>